--- a/src/App.css
+++ b/src/App.css
@@ -10,50 +10,50 @@ body{
 }
 #like{
     margin: 0 auto;
-    width: 82vh;
+    width: 55vw;
     
     margin-top: 3vh;
 }
 blockquote{
-    margin-block-start:0;
+    margin-block-start:;
 }
 .edit{
     position: relative;
     top: 1vh;
     display: flex;
     flex-direction: column;
-    margin: 1vh 1vh;
+    margin: 1vh 1vw;
     border: 1px solid hsl(223, 19%, 93%);
     background-color: hsl(223, 19%, 93%);
-    border-radius: 2vh;
-    width: 4vh;
+    border-radius: 2vw;
+    width: 3vw;
     height: 12vh;
    
 }
-#born{
-    height: 2vh;
-    width: 2vh;
+#born, #long{
+    height: 1vh;
+    width: 1vw;
     display: inline-block;
-    padding: 1vh;
+    padding: 1vh 1vw;
 }
 #tim{
     position: relative;
     background-color: white;
-    height: 23vh;
+    height: 25vh;
     border: 1px solid white;
-    border-radius: 2vh;
+    border-radius: 2vw;
 }
 h1{
     display: inline-block;
     margin-block-start:0;
     margin-block-end: 0;
     font-size:x-small;
-    padding:0 1vh ;
+    padding:0 1vw ;
 }
 .side{
     position: absolute;
     top: 1vh;
-    left: 7vh;
+    left: 7vw;
     display: flex;
     flex-direction: row;
 }
@@ -67,25 +67,25 @@ h1{
     border-radius: 50%;
 }
 #bay{
-    width:5vh ;
-    height:5vh;
-    padding: 1vh;
+    width: 40px;
+    height:40px;
+    padding: 1vh 1vw;
 }
 h2{
     font-size: small;
-    margin-left:1vh;
+    margin-left:1vw;
 }
 #till{
     font-size: smaller;
-    margin:2vh 2vh;
+    margin:2vh 2vw;
+    width: 10vw;
     color:hsl(211, 10%, 45%) ;
 }
 .src{
-    margin-left:28vh;
+    margin-left:11vw;
 }
 span{
-    position: absolute;
-    top: 2vh;
+    margin-left:3px;
     padding-left: 1px;
     color:hsl(238, 40%, 52%);
 }
@@ -93,7 +93,7 @@ span{
     position:absolute;
     font-size: small;
     top: 10vh;
-    left:3vh;
+    left:5vw;
 }
 .article{
     display:none;
@@ -106,28 +106,28 @@ span{
     margin:1vh 0;
 }
 #img1{
-    width: 7vh;
-    height: 7vh;
-    padding:3vh 2vh;
+    width: 45px;
+    height: 45px;
+    padding:3vh 2vw;
 }
 #area{
     margin-top: 3vh;
-    width:53vh ;
+    width:34vw ;
     height:11vh ;
     /*border: 1px solid hsl(211, 10%, 45%);*/
-    border-radius:1vh;
+    border-radius:1vw;
     padding-top: 1vh;
-    padding-left:2vh ;
+    padding-left:1vw ;
     text-align: start;
 }
 #bull{
     position: absolute;
     top: 3vh;
-    left:68vh;
+    left:46vw;
     background-color:hsl(238, 40%, 52%) ;
-    padding:1vh 2vh;
+    padding:1vh 2vw;
     border: none;
-    border-radius: 1vh;
+    border-radius: 1vw;
     color: white;
 }
 #bull:hover{
@@ -139,24 +139,24 @@ span:hover{
 .alien{
     display: none;
     position: relative;
-    left:5vh;
+    left:2vw;
     background-color: white;
     margin: 0 auto;
-    width:72vh;
+    width:50vw;
     height: 24vh;
     border: 1px solid white;
-    border-radius: 2vh;
+    border-radius:1vw;
     margin-top:1vh ;
 }
 .cool{
     display: flex;
     flex-direction:column;
     background-color: hsl(223, 19%, 93%);
-    width: 4vh;
-    height:12vh;
-    margin: 2vh 1vh;
+    width: 3vw;
+    height:15vh;
+    margin: 2vh 1vw;
     border: 1px solid hsl(223, 19%, 93%);
-    border-radius:2vh ;
+    border-radius:2vw ;
 }
 .tin{
     margin-top:1vh ;
@@ -169,14 +169,14 @@ span:hover{
     border-radius: 50%;
 }
 #pin{
-    margin:0 1vh;
+    margin:0 1vw;
     margin-top: 1vh;
 
 }
 #bail{
     position: absolute;
     top: 1vh;
-    left: 6vh;
+    left: 6vw;
     display: flex;
     flex-direction: row;
 }
@@ -187,7 +187,7 @@ span:hover{
     margin-block-end: 0;
     font-size: medium;
     font-weight: 500;
-    padding: 0 1vh;
+    padding: 0 1vw;
 }
 h6{
     position: relative;
@@ -195,7 +195,7 @@ h6{
     border: 1px solid hsl(238, 40%, 52%);
     background-color:hsl(238, 40%, 52%) ;
     color: white;
-    padding:0 1vh;
+    padding:0 1vw;
     margin-block-start: 0;
 
 }
@@ -204,11 +204,11 @@ h6{
     flex-direction: row;
     position: absolute;
     top: 1vh;
-    left: 40vh;
+    left: 30vw;
 }
 h5{
     font-size:smaller;
-    padding: 0 1vh;
+    padding: 0 1vw;
     display: inline-block;
     color: red;
     margin-block-start: 0;
@@ -223,18 +223,26 @@ h5{
 #pon{
     background-color:inherit;
     position: absolute;
-    
-    width: 45vh;
+    width: 33vw;
     font-size: small;
     top: 7vh;
-    left: 3vh;
+    left: 1vw;
     margin-block-end: 0;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+.dep{
+    margin-left: vw;
+    width: 7vw;
+    position: absolute;
+    top: 2vh;
+    left: 36vw;
+}
+
 .min{
     font-size:x-small;
-    margin-left: 1vh;
+    width: 6vw;
+    margin-left: 1vw;
 }
 .ranger{
     position:absolute;
@@ -242,10 +250,11 @@ h5{
     flex-direction: column;
     background-color: white;
     width: 48vh;
-    height: 21vh;
+    height:13vw;
     z-index:1;
     border: 1px solid white;
-    border-radius: 2vh;
+    border-radius:2vw;
+    background-size: cover;
     top: 33vh;
     
 }
@@ -253,7 +262,7 @@ h3{
     display:block;
     margin-block-start:0;
     margin-block-end: 0;
-    padding: 1vh;
+    padding: 1vh 1vw;
     font-size: medium;
 }
 .blockquot{
@@ -261,16 +270,16 @@ h3{
     margin-inline-start:0;
     margin-inline-end: 0;
     font-size: smaller;
-    padding: 1vh;
+    padding: 1vh 1vw;
 }
 #ass{
-    padding-left:7vh;
+    padding-left:3vw;
 }
 #tin{
-    padding:1vh;
+    padding:1vh 1vw;
     color: white;
-    margin-left: 1vh;
-    border-radius: 1vh;
+    margin-left: 1vw;
+    border-radius: 1vw;
 }
 .new{
     display: flex;
@@ -282,7 +291,7 @@ h3{
     bottom: 1px;
     background-color:hsl(228, 33%, 97%);
     filter:opacity(86%) ;
-    height: 100vh;
+    height: 140vh;
     width:100%;
     z-index:2;
 }
@@ -291,45 +300,72 @@ em{
     color:hsl(238, 40%, 52%) ;
 }
 #sip{
-    padding: 0 10px;
+    padding: 0 1vw;
 }
-@media screen and (max-width:375px) {
+.fulz{
+    
+    position: absolute;
+    top: 3vh;
+    left: 46vw;
+    background-color: hsl(238, 40%, 52%);
+    padding: 1vh 2vw;
+    border: none;
+    border-radius: 1vw;
+    color: white;
+    
+}
+@media screen and (max-width:415px) {
     .rate{
         padding-left:0vh;
     }
     #like{
-        width: 68vh;
-        padding-left: 3vh;
+        position: relative;
+        width:90vw;
+        padding-left: 3vw;
     }
     #tim{
-        height: 34vh;
+        height:30vh;
     }
     .edit {
         position:absolute;
-        top: 28vh;
+        top: 23vh;
         display: flex;
         flex-direction: row;
-        margin: 1vh 1vh;
+        margin: 1vh 3vw;
         border: 1px solid hsl(223, 19%, 93%);
         background-color: hsl(223, 19%, 93%);
-        border-radius: 2vh;
-        width: 12vh;
+        border-radius: 3vw;
+        width: 16vw;
         height: 4vh;
     }
     h1{
         padding-top:1vh ;
+        font-size: 12px;
     }
     #sip{
-        padding-top: 10px;
+        padding-top: 5px;
+    }
+    .edit button .might{
+        width:4vw;
     }
     .src{
-        margin-left:22vh;
+        margin-left:22vw;
         position: absolute;
-        top: 28vh;
-        left: 26vh;
+        top: 25vh;
+        left: 40vw;
+    }
+    #born{
+        padding-top:10px;
+        padding-left: 5px;
+        width: 4vw;
+        height: 1vh;
     }
     #con{
-        font-size: large;
+        font-size: 13px;
+        margin-block-start: 0;
+        margin-block-end: 0;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
     }
     span{
     position: absolute;
@@ -337,43 +373,75 @@ em{
     padding-left: 1px;
     }
     #area{
-        width: 42vh;
+        position: absolut;
+        left: vw;
+        width:65vw;
+        height: 10vh;
+    }
+    .tin{
+        margin-top: 10px;
+    }
+    #till{
+        width: 13vh;
     }
     #bull{
-        left: 59vh;
+        left: 75vw;
+        padding: 1vh 2vw;
     }
     .alien{
-        width: 62vh;
-        height: 35vh;
-        left: 8vh;
+        width: 85vw;
+        height: 26vh;
+        left: 4vw;
+        border-radius: 2vw;
+    }
+    .fulz{
+        left: 79vw;
+
     }
     .div{
-        left:36vh;
+        left:42vw;
+        top: 20vh;
         
     }
     #pon{
-        font-size: large;
-
+        font-size:12px;
+        width: 75vw;
+        top: 7vh;
+    }
+    .min{
+        width: 20vw;
     }
     .fall{
-        left:3vh;
+        left:3vw;
     }
     #lil{
-        left: 8vh;
+        left: 4vw;
+    }
+    .dep{
+        top: 21vh;
+        left: 55vw;
     }
     .cool{
         position: absolute;
-        top: 28vh;
-        width: 10vh;
+        top: 18vh;
+        width: 20vw;
         height: 4vh;
         flex-direction: row;
+        border-radius: 3vw;
     }
     
     #cat{
-        width: 33vh;
+        width: 33vw;
     }
     .new{
-        width: 100vh;
+        width: 100vw;
+    }
+    #long{
+        padding: 0;
+        margin-top: 0px;
+        margin-left: 1vw;
+        width: 4vw;
+        height: 1vh;
     }
     
 }
